--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </header>
     <section class="center">
       <h2 class="about">About</h2>
-      <p class="description">
+      <p class="description crop">
         I’m a beginner web and mobile developer. I enjoy building small,
         functional apps and exploring creative ways to make them look good and
         feel intuitive.<br />
